--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ PyAutoGUI==0.9.48
 pycparser==2.19
 pygame==1.9.6
 PyGetWindow==0.0.8
-PyInstaller==3.5
+PyInstaller>=3.6
 PyMsgBox==1.0.7
 pyperclip==1.7.0
 pypiwin32==223
